<resources>
    <string name="app_name">MagicDex</string>

    <string name="content_description">Image</string>
    <string name="blank"> </string>
    <string name="loading">Loading…</string>
    <string name="hello_blank_fragment2">Hello blank fragment 2</string>
    <string name="main_title">Which card\nare you looking for?</string>
    <string name="main_search">Search for card by name</string>
    <string name="mtg_news">Magic: The Gathering News</string>
    <string name="view_all">View All</string>
    <string name="news_title">THEROS BEYOND DEATH PLANESWALKER DECKS</string>
    <string name="news_date">January 8, 2020</string>
    <string name="menu_item_1">MagicDex</string>
    <string name="menu_item_2">Sets</string>
    <string name="menu_item_3">Types</string>
    <string name="menu_item_4">Formats</string>
    <string name="tab_about">About</string>
    <string name="card_text">Card Text</string>
    <string name="mana_cost">Mana Cost</string>
    <string name="mana">Mana</string>
    <string name="cmc">CMC</string>
    <string name="combined_mana_cost">Combined mana cost</string>
    <string name="power">Power</string>
    <string name="toughness">Toughness</string>
    <string name="types">Types</string>
    <string name="type">Type</string>
    <string name="superTypes">Supertypes</string>
    <string name="subTypes">Subtypes</string>
    <string name="misc">Miscellaneous</string>
    <string name="rarity">Rarity</string>
    <string name="set">Set</string>
    <string name="tab_art">Art</string>
    <string name="artist_name">"Artist: %s</string>
    <string name="tab_card_text">Card Text</string>
    <string name="current_text">Current Text</string>
    <string name="flavor_text">Flavor Text</string>
    <string name="original_text">Original Text</string>
    <string name="tab_miscellaneous">Misc</string>
    <string name="rulings">Rulings</string>
    <string name="legalities">Legalities</string>
    <string name="setTitle">Magic Sets</string>
    <string name="release_date">released %s</string>
    <string name="set_type">%s set</string>
    <string name="online_only">Online Only</string>
    <string name="cardTypes">Card Types</string>
    <string name="cardSupertypes">Card Supertypes</string>
    <string name="cardSubtypes">Card Subtypes</string>
    <string name="moreInfo">More Info</string>
    <string name="gameFormats">Game Formats</string>
    <string name="search">Search</string>
    <string name="search_title">Search Results</string>
    <string name="no_results_title">No Results</string>
    <string name="no_results">No results found for \'%s\'. Please try again.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
