<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="card"
            type="com.wreckingball.magicdex.models.Card" />
        <import type="android.view.View" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundLight"
        android:fillViewport="true"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textFlavorHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/flavor_text"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="@{(card.flavor == null || card.flavor.empty) ? View.GONE : View.VISIBLE}"
                 />
            <TextView
                android:id="@+id/textFlavor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                app:textOrGone="@{card.flavor}" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/current_text"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textCurrent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                app:textWithImages="@{card.text}"/>
            <TextView
                android:id="@+id/textOriginalHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/original_text"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="@{(card.originalText == null || card.originalText.empty) ? View.GONE : View.VISIBLE}"
                />
            <TextView
                android:id="@+id/textOriginal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                app:textWithImages="@{card.originalText}" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>