<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">
    <ImageView
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end"
        android:layout_marginTop="-80dp"
        android:layout_marginEnd="-80dp"
        android:adjustViewBounds="true"
        android:alpha="0.10"
        android:background="@drawable/magic_logo"
        android:contentDescription="@string/blank"
        android:tint="@color/white" />
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="false"
        app:elevation="0dp">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="false"
            app:collapsedTitleTextAppearance="@style/AppTheme.Title.Collapsed"
            app:expandedTitleTextAppearance="@style/AppTheme.Title.Expanded"
            app:layout_scrollFlags="scroll|enterAlways|exitUntilCollapsed">
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="bottom|end"
                app:elevation="0dp"
                app:layout_collapseMode="pin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardTypes"
                    android:textColor="@color/black"
                    android:textSize="32sp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:background="@drawable/type_background_rounded"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cardSupertypes"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/supertypeMoreInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moreInfo"
                    android:textColor="@color/indigo"
                    android:textSize="18sp" />
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewSupertypes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                app:layoutManager="GridLayoutManager"
                app:spanCount="2"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:itemCount="6"
                tools:listitem="@layout/item_types"
                tools:spanCount="2" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cardTypes"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/typeMoreInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moreInfo"
                    android:textColor="@color/indigo"
                    android:textSize="18sp" />
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewTypes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                app:layoutManager="GridLayoutManager"
                app:spanCount="2"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:itemCount="6"
                tools:listitem="@layout/item_types"
                tools:spanCount="2" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cardSubtypes"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/subtypeMoreInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moreInfo"
                    android:textColor="@color/indigo"
                    android:textSize="18sp" />
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewSubtypes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                app:layoutManager="GridLayoutManager"
                app:spanCount="2"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:itemCount="6"
                tools:listitem="@layout/item_types"
                tools:spanCount="2" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <ProgressBar
        android:layout_gravity="center"
        android:id="@+id/progressBarTypes"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>